[package]
name = "ssd1351"
version = "0.5.0"
authors = ["Scott Mabin <mabez123@gmail.com>"]
description = "Driver crate for the SSD1351 16bit colour OLED display driver."
keywords = ["no-std", "ssd1351", "oled", "embedded", "embedded-hal-driver"]
edition = "2021"
repository = "https://github.com/MabezDev/ssd1351"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
	"docs/",
	"docs/*"
]

[features]
#default = ["graphics", "embedded-graphics-core/default", "maybe-async/is_sync"]
default = ["graphics", "buffered", "async_draw"]
graphics = ["embedded-graphics-core"]
buffered = []
async_draw = ["embedded-graphics-core/async_draw", "dep:shared-display-core"]

[dependencies]
embedded-graphics-core = { version = "0.4", default-features = false, optional = true, features = ["async_draw"] }
embedded-hal = { version = "1.0.0" }
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
shared-display-core = { git = "https://github.com/paulmoseskailer/shared-display.git", optional = true }
maybe-async = "0.2"

[patch.crates-io]
embedded-graphics = { git = "https://github.com/paulmoseskailer/embedded-graphics.git" }
embedded-graphics-core = { git = "https://github.com/paulmoseskailer/embedded-graphics.git" }
